Role column added to users view.