@@ -5,12 +5,10 @@ import lab_8.entity.Role;
 import lab_8.entity.User;
 import lab_8.repository.RoleRepository;
 import lab_8.repository.UserRepository;
-import org.hibernate.validator.constraints.Range;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -40,7 +38,7 @@ public class UserServiceImpl implements UserService{
         if (role == null){
             role = checkRoleExist();
         }
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(role));
         userRepository.save(user);
     }
 
@@ -51,7 +49,7 @@ public class UserServiceImpl implements UserService{
     public List<UserDto> findAllUsers() {
         List<User> users = userRepository.findAll();
         return users.stream()
-                .map((user) -> mapToUserDto(user))
+                .map(this::mapToUserDto)
                 .collect(Collectors.toList());
     }
 
@@ -61,6 +59,11 @@ public class UserServiceImpl implements UserService{
         userDto.setFirstName(str[0]);
         userDto.setLastName(str[1]);
         userDto.setEmail(user.getEmail());
+        if (user.getRoles().get(0).getName().equals("ROLE_ADMIN")) {
+            userDto.setRole("Administrator");
+        }else {
+            userDto.setRole("User");
+        }
         return userDto;
     }
 
